--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
             font-family: "Gowun Dodum", sans-serif;
             font-weight: 400;
             font-style: normal;
-        }
+        };
 
-        ;
+        
     </style>
     <script>
 
-        // 카드 클릭시 영화 id값 불러오기
+        // 영화카드 클릭시 영화 id값 불러오기
         function whatid() {
             alert('제발 좀 되라');
         };
@@ -44,7 +44,8 @@
 
     <section>
         <div id="mycards">
-            <div onclick="whatid()" class="card">
+            <div id="whatid" class="card">
+                <!-- a태그로 했는데 왜 마우스 포인트가 안 바뀌는지 확인하기 -->
                 <a href="#"><img src="" alt="영화 이미지" /></a>
                 <h3>영화제목</h3>
                 <p>줄거리 요약</p>
