--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             font-style: normal;
         };
 
-        
+
     </style>
     <script>
 
@@ -44,8 +44,9 @@
 
     <section>
         <div id="mycards">
-            <div id="whatid" class="card">
-                <!-- a태그로 했는데 왜 마우스 포인트가 안 바뀌는지 확인하기 -->
+            <div id="whatid" id="card">
+                <!-- a태그로 했는데 왜 마우스 포인트가 안 바뀌는지 확인하기
+                     => js에서 innerHTML로 교체되서 안읽힘 => temp-html = 여기에서 a태그 추가했음 -->
                 <a href="#"><img src="" alt="영화 이미지" /></a>
                 <h3>영화제목</h3>
                 <p>줄거리 요약</p>
